--- a/index.html
+++ b/index.html
@@ -1,33 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <head>
+    <title>
+      Структурные теги
+    </title>
 </head>
 <body>
-  <header>
-    <div> app.creation
-
-    </div>
-    <nav>
-      <a href="#">start</a>
-      <a href="#">services</a>
-      <a href="#">about</a>
-      <a href="#">blog</a>
-      <a href="#">contact us</a>
+  <header> Шапка
+      <nav>
+      <a href="#">Истории</a>
+      <a href="#">Персоны</a>
+      <a href="#">Фотоархив</a>
+      <a href="#">Новостная рассылка</a>
+      <a href="#">Архив номеров</a>
+      <a href="#">Температура</a>
+      <a href="#">Курс $</a>
+      <a href="#">Курс евро</a>
     </nav>
   </header>
   <section>
     <main>
-      <h1>Building an App Without Design Expertise?</h1>
-      <p>I help tech startups design better digital products without hiring a full-time designer</p>
-      <button>Schedule free consultation</button>
+      <h1>BUSINESS CLASS</h1>
+      <nav>
+      <a href="#">Свежий номер</a>
+      <a href="#">Главные тексты</a>
+      <a href="#">Новая транспортная модель</a>
+      <a href="#">Кафе и рестораны</a>
+      <a href="#">Поиск по сайту</a>
+          </nav>
+      <p>ИЗ АЭРОПОРТА ПЕРМИ ВЫПОЛНЕН ПЕРВЫЙ МЕЖДУНАРОДНЫЙ РЕЙС</p>
+        <p>Аэропорт Перми возобновил работу</p>
+        <footer>
+          <p>Дата, время, кол-во просмотров</p>
+          </footer>
+
     </main>
-    <div class="">
-      <img src="" alt="">
-    </div>
+    <aside>
+      <h1>ГЛАВНЫЕ НОВОСТИ</h1>
+      <nav>
+      <a href="#">С 1 марта в Перми</a>
+      <a href="#">Новые случаи</a>
+      <a href="#">На месте ТЦ</a>
+      <a href="#">Власти рассматривают</a>
+      <a href="#">Суд рассмотрит</a>
+          </nav>
+        </aside>
   </section>
+
+  <section>
+    <p>ГОРОД</p>
+    <nav>
+    <a href="#">Азиатский вектор</a>
+      </nav>
+      <footer>
+        <p>Дата, время, кол-во просмотров</p>
+        </footer>
+        </section>
+
+  <section>
+    <p>ЭКОНОМИКА</p>
+    <nav>
+    <a href="#">Спортивные надежды</a>
+      </nav>
+          <footer>
+              <p>Дата, время, кол-во просмотров</p>
+              </footer>
+    </section>
+
+    <aside>
+      <p>ПОДПИШИСЬ НА НОВОСТНУЮ РАССЫЛКУ</p>
+        <p>Отправляем одно письмо в день</p>
+
+        </aside>
+
+        <aside>
+          <a href="#">
+            <p>ПОДПИШИСЬ НА НОВОСТНУЮ РАССЫЛКУ</p>
+            <p>Отправляем одно письмо в день</p>
+            </a>
+
+            </aside>
+
+
 </body>
 </html>
