--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>
-      Структурные теги
-    </title>
-</head>
+      <meta charset="UTF-8">
+
+      <title>Document</title>
+      <link rel="stylesheet" href="styles.css"
+    </head>
+
 <body>
   <header> Шапка
       <nav>
@@ -17,7 +19,7 @@
       <a href="#">Курс $</a>
       <a href="#">Курс евро</a>
     </nav>
-  </header>
+
   <section>
     <main>
       <h1>BUSINESS CLASS</h1>
