--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
       <meta charset="UTF-8">
-
-      <title>Document</title>
       <link rel="stylesheet" href="styles.css"
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+      <title>Использование google шрифов</title>
     </head>
 
 <body>
